chore: revert to upstream numpyencoder
The fix I submitted [upstream](https://github.com/hmallen/numpyencoder/pull/8) to detect the Numpy version being used and handle type deprecation whilst providing backwards compatibility has now been merged.

We can therefore revert to using upstream PyPI released version of `numpyencoder` and remove the use of the forked [AFM-SPM-numpyencoder](https://github.com/AFM-SPM/numpyencoder) version where the same fix had been applied.

This in turn means that releases to PyPI will work again (as you can't release to PyPI when you have dependencies that come from Git repos).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
   "keras",
   "matplotlib",
   "numpy~=2.0.0",  # Until TensorFlow supports newer versions
-  "numpyencoder @ git+https://github.com/AFM-SPM/numpyencoder@master",
+  "numpyencoder",
   "pandas",
   "pyyaml",
   "ruamel.yaml",
