--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -1,4 +1,4 @@
-base_dir: ./ # Directory in which to search for data files
+base_dir: ./tests/resources # Directory in which to search for data files
 output_dir: ./output # Directory to output results to
 log_level: info # Verbosity of output. Options: warning, error, info, debug
 cores: 2 # Number of CPU cores to utilise for processing multiple files simultaneously.
@@ -15,7 +15,7 @@ filter:
     below: 10.0 # Threshold for data below the image background
     above: 1.0 # Threshold for data above the image background
   threshold_absolute:
-    below: -1.0 # Threshold for data below the image background
+    below: 1.0 # Threshold for data below the image background
     above: 1.0 # Threshold for data above the image background
   gaussian_size: 1.0121397464510862 # Gaussian blur intensity in px
   gaussian_mode: nearest # Mode for Gaussian blurring. Options : nearest, reflect, constant, mirror, wrap
@@ -33,13 +33,9 @@ grains:
   # Thresholding by height
   grain_crop_padding: 1 # Padding to apply to grains. Needs to be at least 1, more padding may help with unets.
   threshold_method: std_dev # Options : std_dev, otsu, absolute, unet
-  otsu_threshold_multiplier: 1.0
-  threshold_std_dev:
-    below: [10.0] # Thresholds for grains below the image background. List[float].
-    above: [1.0] # Thresholds for grains above the image background. List[float].
-  threshold_absolute:
-    below: [-1.0] # Thresholds for grains below the image background. List[float].
-    above: [1.0] # Thresholds for grains above the image background. List[float].
+  otsu_threshold_multiplier: 1.0 # Thresholds for data
+  threshold_std_dev: [1.0]
+  threshold_absolute: [1.0]
   direction: above # Options: above, below, both (defines whether to look for grains above or below thresholds or both)
   area_thresholds:
     above: [300, 3000] # above surface [Low, High] in nm^2 (also takes null)
