--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -37,9 +37,7 @@ grains:
   threshold_std_dev: [1.0]
   threshold_absolute: [1.0]
   direction: above # Options: above, below, both (defines whether to look for grains above or below thresholds or both)
-  area_thresholds:
-    above: [300, 3000] # above surface [Low, High] in nm^2 (also takes null)
-    below: [null, null] # below surface [Low, High] in nm^2 (also takes null)
+  area_thresholds: [[300, 3000], [null, null]] # [above, below] surface [Low, High] in nm^2 (also takes null)
   remove_edge_intersecting_grains: true # Whether or not to remove grains that touch the image border
   unet_config:
     model_path: null # Path to a trained U-Net model
