--- a/tests/resources/test_partial_config.yaml
+++ b/tests/resources/test_partial_config.yaml
@@ -25,17 +25,9 @@ grains:
   # Thresholding by height
   threshold_method: std_dev # Options : std_dev, otsu, absolute, unet
   otsu_threshold_multiplier: 1.0
-  threshold_std_dev:
-    below: [10.0] # Threshold for grains below the image background
-    above: [1.0] # Threshold for grains above the image background
-  threshold_absolute:
-    below: [-1.0] # Threshold for grains below the image background
-    above: [1.0] # Threshold for grains above the image background
-  direction: above # Options: above, below, both (defines whether to look for grains above or below thresholds or both)
-  # Thresholding by area
-  area_thresholds:
-    above: [300, 3000] # above surface [Low, High] in nm^2 (also takes null)
-    below: [null, null] # below surface [Low, High] in nm^2 (also takes null)
+  threshold_std_dev: [1.0, -10.0] # Thresholds for data either side of the image background, positive for above and negative for below
+  threshold_absolute: [1.0] # Thresholds for data either side of the image background, positive for above and negative for below
+  area_thresholds: [10, 1000000000] # [Low, High] in nm^2 (also takes null)
   remove_edge_intersecting_grains: true # Whether or not to remove grains that touch the image border
   unet_config:
     model_path: null # Path to a trained U-Net model
