--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -15,7 +15,7 @@ filter:
     below: 10.0 # Threshold for data below the image background
     above: 1.0 # Threshold for data above the image background
   threshold_absolute:
-    below: 1.0 # Threshold for data below the image background
+    below: -1.0 # Threshold for data below the image background
     above: 1.0 # Threshold for data above the image background
   gaussian_size: 1.0121397464510862 # Gaussian blur intensity in px
   gaussian_mode: nearest # Mode for Gaussian blurring. Options : nearest, reflect, constant, mirror, wrap
@@ -34,10 +34,9 @@ grains:
   grain_crop_padding: 1 # Padding to apply to grains. Needs to be at least 1, more padding may help with unets.
   threshold_method: std_dev # Options : std_dev, otsu, absolute, unet
   otsu_threshold_multiplier: 1.0 # Thresholds for data
-  threshold_std_dev: [1.0, -1.0]
-  threshold_absolute: [1.0]
-  direction: above # Options: above, below, both (defines whether to look for grains above or below thresholds or both)
-  area_thresholds: [[300, 3000], [null, null]] # [above, below] surface [Low, High] in nm^2 (also takes null)
+  threshold_std_dev: [1.0, -10.0] # Thresholds for data either side of the image background, positive for above and negative for below
+  threshold_absolute: [1.0] # Thresholds for data either side of the image background, positive for above and negative for below
+  area_thresholds: [10, 1000000000] # [Low, High] in nm^2 (also takes null)
   remove_edge_intersecting_grains: true # Whether or not to remove grains that touch the image border
   unet_config:
     model_path: null # Path to a trained U-Net model
