--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -1,4 +1,4 @@
-base_dir: ./tests/resources # Directory in which to search for data files
+base_dir: ./ # Directory in which to search for data files
 output_dir: ./output # Directory to output results to
 log_level: info # Verbosity of output. Options: warning, error, info, debug
 cores: 2 # Number of CPU cores to utilise for processing multiple files simultaneously.
