--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -81,6 +81,7 @@ repos:
     rev: v1.9.0
     hooks:
       - id: numpydoc-validation
+        exclude_files: "^notebooks/*.py$"
 
   - repo: https://github.com/pre-commit/pygrep-hooks
     rev: v1.10.0
