--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -10,7 +10,7 @@ filter:
   run: true # Options : true, false
   row_alignment_quantile: 0.5 # lower values may improve flattening of larger features
   threshold_method: std_dev # Options : otsu, std_dev, absolute
-  otsu_threshold_multiplier: 1.0
+  threshold_otsu_multiplier: 1.0
   threshold_std_dev:
     below: 10.0 # Threshold for data below the image background
     above: 1.0 # Threshold for data above the image background
@@ -33,10 +33,10 @@ grains:
   # Thresholding by height
   grain_crop_padding: 1 # Padding to apply to grains. Needs to be at least 1, more padding may help with unets.
   threshold_method: std_dev # Options : std_dev, otsu, absolute, unet
-  otsu_threshold_multiplier: 1.0 # Thresholds for data
+  threshold_otsu_multiplier: 1.0 # Thresholds for data
   threshold_std_dev: [1.0] # Thresholds for data either side of the image background, positive for above and negative for below
   threshold_absolute: [1.0] # Thresholds for data either side of the image background, positive for above and negative for below
-  area_thresholds: [300, 3000] # [Low, High] in nm^2 (also takes null)
+  threshold_areas: [300, 3000] # [Low, High] in nm^2 (also takes null)
   remove_edge_intersecting_grains: true # Whether or not to remove grains that touch the image border
   unet_config:
     model_path: null # Path to a trained U-Net model
