--- a/topostats/summary_config.yaml
+++ b/topostats/summary_config.yaml
@@ -1,6 +1,6 @@
 base_dir: ./ # Directory from which all files and directories are relative to ("./" is the default current directory)
 output_dir: ./output/summary_distributions
-csv_file: ./all_statistics.csv
+csv_file: ./grain_statistics.csv
 savefig_format: png
 var_to_label: null # Optional YAML file that maps variable names to labels, uses topostats/var_to_label.yaml if null
 molecule_id: grain_number
