feature(classes): Add class attributes and dunder methods
- adds `thresholds` and `threshold_method` properties to `GrainCrop` class
- adds `config` and `full_mask_tensor` properties to `TopoStats` class
- updates tests in light of these changes
- correct minor tpyo in `default_config.yaml`

The main things that this adds though is `__getstate__`/`__setstate__` methods for each of the classes. The reason for
doing so is because classes that have `@property` objects associated with them can't be pickled and so they need
explicit conversion to dictionaries.

See...

- [here](https://stackoverflow.com/a/1939384/1444043)
- [Handling stateful objects](https://docs.python.org/3/library/pickle.html#pickle-state)

Unfortunately this still fails...

```
from pathlib import Path
import pickle as pkl
from topostats.classes import TopoStats

OUTDIR = Path.cwd()
OUTFILE = OUTDIR / "empty.topostats"
empty_topostats = TopoStats(img_path = None)
with OUTFILE.open(mode="wb") as f:
    pkl.dump(empty_topostats, f)
TypeError                                 Traceback (most recent call last)
Cell In[905], line 2
      1 with OUTFILE.open(mode="wb") as f:
----> 2     pkl.dump(empty_topostats, f)

TypeError: cannot pickle 'property' object

empty_topostats.__getstate__()
{'_image_grain_crops': <property at 0x7fb40c81e0c0>,
 '_filename': <property at 0x7fb40c81d170>,
 '_pixel_to_nm_scaling': <property at 0x7fb40c81f880>,
 '_img_path': PosixPath('/home/neil/work/git/hub/AFM-SPM/TopoStats/tmp'),
 '_image': <property at 0x7fb39ce731a0>,
 '_image_original': <property at 0x7fb39ce71e40>,
 '_full_mask_tensor': <property at 0x7fb39ce72980>,
 '_topostats_version': <property at 0x7fb39ce71d00>,
 '_config': <property at 0x7fb39ce72020>}
```

Everything is _still_ a `property`.

This dummy example works fine though...

```
@dataclass
class dummy():
    var1: int | None = None
    var2: float | None = None
    var3: str | None = None
    var4: list[int] | None = None
    var5: dict[str, str] | None = 

--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -20,7 +20,7 @@ filter:
     above: 1.0 # Threshold for data above the image background
   gaussian_size: 1.0121397464510862 # Gaussian blur intensity in px
   gaussian_mode: nearest # Mode for Gaussian blurring. Options : nearest, reflect, constant, mirror, wrap
-  # Scar remvoal parameters. Be careful with editing these as making the algorithm too sensitive may
+  # Scar removal parameters. Be careful with editing these as making the algorithm too sensitive may
   # result in ruining legitimate data.
   remove_scars:
     run: false
