--- a/.pylintrc
+++ b/.pylintrc
@@ -25,11 +25,11 @@ ignore=CVS,
        dnacurvature.py,
        conf.py,
        test_dnacurvature.py,
-       __main__.py
+       __main__.py,
 
 # Add files or directories matching the regex patterns to the ignore-list. The
 # regex matches against paths and can be in Posix or Windows format.
-ignore-paths=
+ignore-paths=notebooks/
 
 # Files or directories matching the regex patterns are skipped. The regex
 # matches against base names, not paths.
