--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -1,4 +1,4 @@
-base_dir: ./ # Directory in which to search for data files
+base_dir: ./tests/resources # Directory in which to search for data files
 output_dir: ./output # Directory to output results to
 log_level: info # Verbosity of output. Options: warning, error, info, debug
 cores: 2 # Number of CPU cores to utilise for processing multiple files simultaneously.
@@ -131,6 +131,7 @@ plotting:
   cmap: null # Colormap/colourmap to use (default is 'nanoscope' which is used if null, other options are 'afmhot', 'viridis' etc.)
   mask_cmap: blue_purple_green # Options : blu, jet_r and any in matplotlib
   histogram_log_axis: false # Options : true, false
+  number_grains: true # Add grain numbers next to each grain mask in images with mask overlays. Options : true, false
 summary_stats:
   run: true # Whether to make summary plots for output data
   config: null
