bug: correct list for types under pull_request of GitHub workflow

--- a/.github/workflows/sphinx_docs_to_gh_pages.yaml
+++ b/.github/workflows/sphinx_docs_to_gh_pages.yaml
@@ -4,7 +4,7 @@ name: Sphinx docs to gh-pages
 on:
   pull_request:
     types:
-      - [closed]
+      - closed
     branches:
       - main
     # Uncomment if only tagged releases are to have documentation built
