--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,16 +26,17 @@ classifiers = [
   "Natural Language :: English",
   "Operating System :: OS Independent",
   "Intended Audience :: Science/Research",
-  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
+  "License :: OSI Approved :: GNU General Public License v3.0 only",
 ]
 keywords = [
   "afm",
-  "image processing"
+  "atomic force microscopy",
+  "image processing",
 ]
 requires-python = ">=3.10, <3.12"
 dependencies = [
   "art",
-  "AFMReader @ git+https://github.com/AFM-SPM/AFMReader@main",
+  "AFMReader",
   "h5py",
   "keras",
   "matplotlib",
