--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -46,6 +46,16 @@ grains:
     above: [300, 3000] # above surface [Low, High] in nm^2 (also takes null)
     below: [null, null] # below surface [Low, High] in nm^2 (also takes null)
   remove_edge_intersecting_grains: true # Whether or not to remove grains that touch the image border
+  endpoint_connection_config:
+    run: true # Whether to run the endpoint connection process
+    class_indices: [1] # List of class indices to process
+    skeletonisation_holearea_min_max: [0, null] # Range (min, max) of a hole area in nm to refill in the smoothed masks.
+    skeletonisation_mask_smoothing_dilation_iterations: 2 # Number of dilation iterations to use for grain smoothing.
+    skeletonisation_mask_smoothing_gaussian_sigma: 2 # Gaussian smoothing parameter 'sigma' in pixels.
+    skeletonisation_method: topostats # Options : zhang | lee | thin | topostats
+    skeletonisation_height_bias: 0.6 # Percentage of lowest pixels to remove each skeletonisation iteration. 1 equates to zhang.
+    endpoint_connection_distance_nm: 10.0 # Maximum distance in nm to connect endpoints.
+    endpoint_connection_cost_map_height_maximum: 3.0 # Maximum height in nm to consider when building the cost map for endpoint connection. Should roughly be the maximum height of your sample.
   unet_config:
     model_path: null # Path to a trained U-Net model
     upper_norm_bound: 5.0 # Upper bound for normalisation of input data. This should be slightly higher than the maximum desired / expected height of grains.
