refactor19: config: Move colourmap_normalisation_bounds
Move from `default_config.yaml` > `plotting_dictionary.yaml` as it is a plotting parameter.

--- a/topostats/plotting_dictionary.yaml
+++ b/topostats/plotting_dictionary.yaml
@@ -378,3 +378,4 @@ curvature_individual_grains:
   savefig_dpi: 600
   core_set: false
   module: "splining"
+  colourmap_normalisation_bounds: [-0.5, 0.5] # Radians per nm to normalise the colourmap to.
