--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -122,6 +122,7 @@ plotting:
     # - nodestats
     # - ordered_tracing
     # - splining
+    # - curvature
   zrange: [null, null] # low and high height range for core images (can take [null, null]). low <= high
   colorbar: true # Options : true, false
   axes: true # Options : true, false (due to off being a bool when parsed)
