--- a/topostats/plotting_dictionary.yaml
+++ b/topostats/plotting_dictionary.yaml
@@ -371,6 +371,7 @@ curvature:
   savefig_dpi: 600
   core_set: true
   module: "splining"
+  colourmap_normalisation_bounds: [-0.5, 0.5] # Radians per nm to normalise the colourmap to.
 curvature_individual_grains:
   filename: "32-individual_grain_curvature"
   title: "Curvature"
