Addressing 'Issue #1272' wherein it is described that summary_stats: run: true prevents completion of topostats processing. default_config.yaml updated to set summary_stats: run: false as the default.

--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -133,5 +133,5 @@ plotting:
   histogram_log_axis: false # Options : true, false
   number_grains: true # Add grain numbers next to each grain mask in images with mask overlays. Options : true, false
 summary_stats:
-  run: true # Whether to make summary plots for output data
+  run: false # Whether to make summary plots for output data
   config: null
