--- a/topostats/var_to_label.yaml
+++ b/topostats/var_to_label.yaml
@@ -9,7 +9,7 @@ area_cartesian_bbox: Cartesian Bounding Box Area / $\mathregular{nm^2}$
 aspect_ratio: Aspect Ratio
 bending_angle: Bending Angle / degrees
 total_contour_length: Total Contour Length
-average_end_to_end_distance: Average End to End Distance
+mean_end_to_end_distance: Mean End to End Distance
 grain_bound_len: Circumference
 grain_curvature1: Smaller Curvature
 grain_curvature2: Larger Curvature
