fix(nodestats): use pruned skeletons as input
- Uses pruned skeleton rather than original skeleton as input to NodeStats class.
- Remove duplication of plotting in disordered tracing.
- Place all disordered traces under `dnatracing/disordered`
- Updates `plotting_dictionary.yaml` and `validation.py` as required.

--- a/topostats/plotting_dictionary.yaml
+++ b/topostats/plotting_dictionary.yaml
@@ -246,6 +246,7 @@ skeleton:
   savefig_dpi: 600
   module: "disordered_tracing"
 pruned_skeleton:
+  filename: "22-pruned_skeletons"
   title: "Pruned Skeletons"
   image_type: "non-binary"
   mask_cmap: "blue"
