fix(ordered_tracing): use pruned skeletons as input
As with nodestats nomenclature of parameters/attributes of classes only stated `skeleton` (although docstrings indicated
these were pruned I missed this as I deleted the docstrings when switching to passing in a `GrainCrop` object).

- switch to pulling the `GrainCrop.disordered_trace.images["pruned_skeleton"]` out of `GrainCrop` objects and using as
  the now renamed `self.pruned_skeleton` attribute to both `OrderedTraceNodestats` and `OrderedTraceTopostats` classes.
- adds a `filename` to plotting of `ordered_traces` along with validation.
- plots grain level ordered tracing plots

--- a/topostats/plotting_dictionary.yaml
+++ b/topostats/plotting_dictionary.yaml
@@ -321,6 +321,7 @@ node_line_trace:
   module: "nodestats"
 # Ordered tracing troubleshooting images
 ordered_traces:
+  filename: "##-ordered_traces"
   title: "Ordered Traces"
   image_type: "non-binary"
   mask_cmap: "viridis"
