fix(tests|processing): Fixes broken tests
- Ensures returning the `topostats_object` is correctly unpacked.
- Updates location of whole image plots for dnatracing steps for `test_image_set()`
- Updates some of the error messages that are captured in logs for `test_check_run_steps`
- Updates error message in test when no grains are found.
- Ensures whole image plots are made for `nodestats`
- Number of `Topostats.n_grains` set to zero is `TopoStats.grain_crops()` is `None` (or `len() == 0`)
- Adds `filename` for one image.
- Importantly fixes the logic for aggregating statistics to dataframes.

--- a/topostats/plotting_dictionary.yaml
+++ b/topostats/plotting_dictionary.yaml
@@ -287,6 +287,7 @@ node_centres:
   savefig_dpi: 600
   module: "nodestats"
 connected_nodes:
+  filename: "27-connected_nodes"
   title: "Skeletons and Nodes"
   image_type: "non-binary"
   mask_cmap: "blue_purple_green"
