chore: type-hints, tpyos, expanding docs, removing comments
Addressing feedback from PR #1284, thanks @SylviaWhittle and @tobyallwood for the diligent 👀

--- a/topostats/default_config.yaml
+++ b/topostats/default_config.yaml
@@ -92,7 +92,7 @@ nodestats:
   pair_odd_branches: false # Whether to try and pair odd-branched nodes. Options: true and false.
 ordered_tracing:
   run: true
-  ordering_method: nodestats # The method of ordering the disordered traces.
+  ordering_method: nodestats # The method of ordering the disordered traces. Options : nodestats | original
 splining:
   run: true # Options : true, false
   method: "rolling_window" # Options : "spline", "rolling_window"
